--- a/templates/account/account_inactive.html
+++ b/templates/account/account_inactive.html
@@ -2,10 +2,10 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Account Inactive" %}{% endblock %}
+{% block head_title %}{% trans "Hisob nofaol" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
+<h1>{% trans "Hisob nofaol" %}</h1>
 
-<p>{% trans "This account is inactive." %}</p>
+<p>{% trans "Bu hisob faol emas." %}</p>
 {% endblock %}
