--- a/templates/socialaccount/authentication_error.html
+++ b/templates/socialaccount/authentication_error.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Ijtimoiy tarmoqqa kirishda xatolik" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Social Network Login Failure" %}</h1>
+<h1>{% trans "Ijtimoiy tarmoqqa kirishda xatolik" %}</h1>
 
-<p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
+<p>{% trans "Ijtimoiy tarmoq hisobingiz orqali kirishga urinishda xatolik yuz berdi." %}</p>
 {% endblock %}
