--- a/templates/base.html
+++ b/templates/base.html
@@ -105,13 +105,13 @@
 
     <!-- Mobile Menu -->
 
-    <div class='mob-menu'>
+    <div class='mob-menu' >
         <ul>
-            <a href = '/'><li>Home</li></a>
-            <a href = '/about'><li>About</li></a>
-            <a href = '/contact'><li>Contact</li></a>
+            <a href = '/'><li>Bosh saxifa</li></a>
+            <a href = '/about'><li>Biz haqimizda</li></a>
+            <a href = '/contact'><li>Biz bilan a'loqa</li></a>
             <a href="javascript:void(0);"><li style='display: flex; justify-content: baseline; border-bottom: 2px solid #f8f8ff;'>
-                <span>Categories</span>
+                <span>Turkumlar</span>
                 {% comment %} <img class='categories-btn' style='height: 1.5rem; width: 1.5rem; cursor: pointer;' src='{% static 'img/down.svg' %}'> {% endcomment %}
                 <svg class='categories-btn' style='cursor: pointer;' width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5303 8.96967C16.8232 9.26256 16.8232 9.73744 16.5303 10.0303L12.5303 14.0303C12.2374 14.3232 11.7626 14.3232 11.4697 14.0303L7.46967 10.0303C7.17678 9.73744 7.17678 9.26256 7.46967 8.96967C7.76256 8.67678 8.23744 8.67678 8.53033 8.96967L12 12.4393L15.4697 8.96967C15.7626 8.67678 16.2374 8.67678 16.5303 8.96967Z" fill="black"/>
@@ -167,13 +167,13 @@
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M11.6116 3.30203C11.8551 3.23273 12.1119 3.23267 12.3553 3.30176C12.8729 3.44863 13.3952 3.58485 13.9192 3.72153C16.38 4.36334 18.8793 5.01516 21.1028 6.82618L22.1267 7.66016C22.542 7.99845 22.7498 8.49918 22.75 9V16C22.75 16.4142 22.4142 16.75 22 16.75C21.5858 16.75 21.25 16.4142 21.25 16V11.0567L21.0871 11.1896C20.3166 11.8183 19.5128 12.3066 18.6888 12.7029C18.7282 12.794 18.75 12.8944 18.75 13V17.2939C18.75 18.4272 18.0548 19.4444 16.9989 19.8561L12.9989 21.4156C12.3565 21.666 11.6435 21.666 11.0011 21.4156L7.0011 19.8561C5.94522 19.4444 5.25 18.4272 5.25 17.2939V13C5.25 12.8918 5.27292 12.7889 5.31418 12.696C4.48383 12.2973 3.67373 11.8063 2.89724 11.1738L1.8733 10.3398C1.04264 9.66327 1.04221 8.33693 1.87215 7.65967L2.91292 6.81037C5.12037 5.00904 7.60193 4.36111 10.0445 3.72335C10.5697 3.58623 11.0931 3.44957 11.6116 3.30203ZM21.25 9.0006C21.25 8.91051 21.2136 8.85102 21.1794 8.8232L20.1555 7.98922C18 6.5 16.0794 5.84319 13.6399 5.20216C13.1035 5.06121 12.5519 4.91626 11.984 4.75559C11.4135 4.91742 10.8599 5.06306 10.3217 5.20465C7.9018 5.84128 5.79323 6.39601 3.86128 7.97253L2.8205 8.82184C2.78631 8.84973 2.74996 8.90931 2.75 8.9994C2.75004 9.08949 2.78643 9.14898 2.82058 9.1768L3.84453 10.0108C5.79285 11.5977 7.92065 12.1568 10.3601 12.7978C10.8965 12.9388 11.4481 13.0837 12.016 13.2444C12.5865 13.0826 13.14 12.937 13.6782 12.7954C16.0981 12.1587 18.2068 11.604 20.1387 10.0275L21.1795 9.17816C21.2137 9.15029 21.25 9.09054 21.25 9.0006ZM13.9555 14.2766C15.0553 13.9895 16.163 13.7003 17.25 13.3046V17.2939C17.25 17.8091 16.934 18.2714 16.454 18.4585L12.454 20.018C12.1621 20.1318 11.8379 20.1318 11.546 20.018L7.54596 18.4585C7.06601 18.2714 6.75 17.8091 6.75 17.2939V13.2961C7.84877 13.6963 8.96869 13.9884 10.0808 14.2785C10.6048 14.4151 11.1271 14.5514 11.6447 14.6982C11.8881 14.7673 12.145 14.7673 12.3884 14.698C12.9069 14.5504 13.4303 14.4138 13.9555 14.2766Z" fill="black"/>
                     </svg>                        
-                    <span>skillmate</span>
+                    <span>IT Creative</span>
                     </div>
                 </a>
             </span>
             <div style='margin-top: 1rem;' class='skillmate-foot-about'>
                 <p>
-                    Transform the way you learn with skillmate, featuring advanced tools and resources to help you achieve your goals and maximize your potential.
+                    Muvaffaqiyat kuchda. Kuch esa sizda.
                 </p>
             </div>
             <div class='foot-socials'>
@@ -217,20 +217,20 @@
         </div>
         <div>
             <span>
-                Company
+                Kampaniya
             </span>
             <ul>
-                <li><a href = '/'>Home</a></li>
-                <li><a href = '/about'>About</a></li>
-                <li><a href = '/contact'>Contact</a></li>
-                <li><a href = '/contact'>Blog</a></li>
-                <li><a href = '/contact'>Privacy</a></li>
-                <li><a href = '/contact'>Affiliates</a></li>
+                <li><a href = '/'>Bosh saxifa</a></li>
+                <li><a href = '/about'>Biz haqimizda</a></li>
+                <li><a href = '/contact'>Biz bilan a'loqa</a></li>
+                <li><a href = '/contact'>Blog saxifa</a></li>
+                <li><a href = '/contact'>A'loqa bo'limi</a></li>
+                <li><a href = '/contact'>Ishlab chiquvchi </a></li>
             </ul>
         </div>
         <div>
             <span>
-                Courses
+                Kurslar
             </span>
             <ul>
                 <li><a href = '/about'>Web Development</a></li>
@@ -242,29 +242,24 @@
         </div>
         <div>
             <span>
-                Application
+                Dasturlarimiz
             </span>
             <ul>
                 <li>
                     <a href='#'>
                         <button style='font-weight: 600;'>
-                            Download Android App
+                            Android uchun
                         </button>
                     </a>
                 </li>
                 <li>
                     <a href='#'>
                         <button style='padding: 0.5rem 2rem; font-weight: 600;'>
-                            Download iOS App
+                            Iphone uchun 
                         </button>
                     </a>
                 </li>
             </ul>
-            <div style="margin-top: 1rem;" class="foot-credits">
-                <p>
-                    <p>Copyright &copy;<script>document.write(new Date().getFullYear())</script> <a style="font-weight: 600;" href="/">skillmate</a> All Rights Reserved</p>
-                </p>
-            </div>
         </div>
         </div>
     </footer>
