--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -2,23 +2,23 @@
 
 {% load i18n %}
 
-{% block title %}Sign Out{% endblock %}
+{% block title %}Tizimdan chiqish{% endblock %}
 
 {% block content %}
 <section class='signout'>
 
   <div class='container signout-content'>
 
-<h1>{% trans "Sign Out" %}</h1>
+<h1>{% trans "Chiqishni davom ettirasizmi?" %}</h1>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<p>{% trans 'Tizimdan chiqishga ishongingiz komil bo\'lsa Chiqish tugmasini bosishingiz mumkin.' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <button type="submit">{% trans 'Chiqish' %}</button>
 </form>
 </div>
 </section>
