--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -2,11 +2,11 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+{% block head_title %}{% trans "Elektron pochta manzilingizni tasdiqlang" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
+    <h1>{% trans "Elektron pochta manzilingizni tasdiqlang" %}</h1>
 
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. If you do not see the verification e-mail in your main inbox, check your spam folder. Please contact us if you do not receive the verification e-mail within a few minutes.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Tasdiqlash uchun sizga elektron xat yubordik. Roʻyxatdan oʻtish jarayonini yakunlash uchun taqdim etilgan havolaga oʻting. Agar siz tasdiqlovchi elektron pochtani asosiy pochta qutingizda ko'rmasangiz, spam jildini tekshiring. Agar bir necha daqiqa ichida tasdiqlovchi elektron xat olmagan boʻlsa, biz bilan bogʻlaning.{% endblocktrans %}</p>
 
 {% endblock %}
