--- a/templates/base.html
+++ b/templates/base.html
@@ -240,19 +240,19 @@
             </span>
             <ul>
                 <li>
-                    <a href='#'>
-                        <button style='padding: 0.5rem 2rem; font-weight: 600;'>
-                            Android uchun
-                        </button>
+                    <a href="#">
+                      <button class="download-button">
+                        Android uchun
+                      </button>
                     </a>
-                </li>
-                <li>
-                    <a href='#'>
-                        <button style='padding: 0.5rem 2.15rem; font-weight: 600;'>
-                            Iphone uchun 
-                        </button>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <button class="download-button">
+                        Iphone uchun
+                      </button>
                     </a>
-                </li>
+                  </li>
             </ul>
         </div>
         </div>
