--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -4,7 +4,7 @@
 {% load account socialaccount %}
 
 
-{% block title %}Sign In{% endblock %}
+{% block title %}Kirish{% endblock %}
 
 {% block content %}
 <section class='signin'>
@@ -16,7 +16,7 @@
 
         </div>
         <div>
-      <h1>Sign in to continue</h1>
+      <h1>Tizimga kirish</h1>
       {% get_providers as socialaccount_providers %}
       {% if socialaccount_providers %}
         {% comment %} <p>{% blocktrans with site.name as site_name %}Please sign in with one
@@ -24,8 +24,8 @@
         for a {{ site_name }} account and sign in below:{% endblocktrans %}</p> {% endcomment %}
         {% include "socialaccount/snippets/login_extra.html" %}
       {% else %}
-        <p>{% blocktrans %}If you have not created an account yet, then please
-        <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+        <p>{% blocktrans %}Agar siz hali hisob yaratmagan bo'lsangiz, iltimos
+        <a href="{{ signup_url }}">Ro'yxatdan o'ting</a> first.{% endblocktrans %}</p>
       {% endif %}
       <form class="login" method="POST" action="{% url 'account_login' %}">
         {% csrf_token %}
@@ -33,13 +33,13 @@
         {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a><br>
-        <button class="primaryAction" type="submit">Sign In</button>
+        <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Parolni unutdingizmi?" %}</a><br>
+        <button class="primaryAction" type="submit">Kirish</button>
       </form>
       {% comment %} <div class="socialaccount_ballot">
         <ul class="socialaccount_providers"> {% endcomment %}
           {% comment %} {% include "socialaccount/snippets/provider_list.html" with process="login" %} {% endcomment %}
-          <a class="login-via-btn" href="{% provider_login_url 'google' %}">Login via Google</a>
+          <a class="login-via-btn" href="{% provider_login_url 'google' %}">Google orqali kirish</a>
         {% comment %} </ul> {% endcomment %}
         {% comment %} <div class="login-or">{% trans 'or' %}</div> {% endcomment %}
       {% comment %} </div> {% endcomment %}
