--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -2,16 +2,16 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block head_title %}{% trans "Parolni o'zgartirish" %}{% endblock %}
 
 {% block content %}
 
-    <h1>{% trans "Change Password" %}</h1>
+    <h1>{% trans "Parolni o'zgartirish" %}</h1>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        <button type="submit" name="action">{% trans "Parolni o'zgartirish" %}</button>
+        <a href="{% url 'account_reset_password' %}">{% trans "Parol esdan chiqdimi?" %}</a>
     </form>
 {% endblock %}
