--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -3,27 +3,27 @@
 {% load i18n %}
 {% load account %}
 
-{% block title %}Password Reset{% endblock %}
+{% block title %}Parolni tiklash{% endblock %}
 
 {% block content %}
 
 <section class='password-reset'>
     <div class='container password-reset-content'>
 
-    <h1>{% trans "Password Reset" %}</h1>
+    <h1>{% trans "Parolni tiklash" %}</h1>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <p>{% trans "Parolni unutdingizmi? Quyida elektron pochta manzilingizni kiriting va biz sizga uni qayta o'rnatishga ruxsat beruvchi elektron pochta xabarini yuboramiz." %}</p>
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form.as_p }}
-        <input class='btn' type="submit" value="{% trans 'Reset My Password' %}" />
+        <input class='btn' type="submit" value="{% trans 'Davom e\'tish' %}" />
     </form>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Agar parolingizni qayta tiklashda muammoga duch kelsangiz, biz bilan bog'laning.{% endblocktrans %}</p>
 </div>
 </section>
 
