--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -3,18 +3,18 @@
 {% load i18n %}
 {% load account %}
 
-{% block title %}Password Reset{% endblock %}
+{% block title %}Parol o'zgartirish{% endblock %}
 
 {% block content %}
 <section>
     <div class='container password-instructions-sent'>
-    <h1>{% trans "Password Reset" %}</h1>
+    <h1>{% trans "Parol o'zgartirish" %}</h1>
     
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
     
-    <p style='margin: 1rem 0'>{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
+    <p style='margin: 1rem 0'>{% blocktrans %}Sizga elektron xat yubordik. Agar siz uni olmagan bo'lsangiz, spam jildingizni tekshiring. Aks holda, agar siz uni bir necha daqiqada olmagan bo'lsangiz, biz bilan bog'laning.{% endblocktrans %}</p>
 </div>
 </section>
 {% endblock %}
