--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
 {% load i18n %}
-{% block title %}Change Password{% endblock %}
+{% block title %}Parolni tiklash{% endblock %}
 
 {% block content %}
 <section>
     <div class='container password-change'>
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+    <h1>{% if token_fail %}{% trans "Yaroqsiz token" %}{% else %}{% trans "Parolni tiklash" %}{% endif %}</h1>
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+        <p>{% blocktrans %}Parolni tiklash havolasi yaroqsiz, ehtimol u allaqachon ishlatilgan.  Iltimos, yangi <a href="{{ passwd_reset_url }}">parolni tiklashni so'rang</a>.{% endblocktrans %}</p>
     {% else %}
         <form class='pass-change-form' method="POST" action="{{ action_url }}">
             {% csrf_token %}
