--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% load i18n %}
-{% block title %}Change Password{% endblock %}
+{% block title %}Parol o'zgartirish{% endblock %}
 
 {% block content %}
 <section>
 <div class='container password-changed'>
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    <h1>{% trans "Parol o'zgartirish" %}</h1>
+    <p>{% trans 'Endi parolingiz o'zgartirildi.' %}</p>
 </div>
 </section>
 {% endblock %}
