--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,7 +5,7 @@
 
 {% load account socialaccount %}
 
-{% block title %}Sign up{% endblock %}
+{% block title %}Ro'yxatdan o'tish{% endblock %}
 
 {% block content %}
 
@@ -17,16 +17,16 @@
           <img style = "object-fit: cover; border-radius: 4px;" src='{% static 'img/signup-img.webp' %}' width="100%" height="100%">
         </div>
         <div>
-          <h1>Sign up</h1>
+          <h1>Ro'yxatdan o'tish</h1>
           <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
             {% csrf_token %}
             {{ form.as_p }}
             {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
             {% endif %}
-            <button style='width: 100%' type="submit">Sign Up</button>
+            <button style='width: 100%' type="submit">Ro'yxatdan o'tish</button>
           </form>
-          <a style='margin-top: 1rem;' class="login-via-btn" href="{% provider_login_url 'google' %}">Login via Google</a>
+          <a style='margin-top: 1rem;' class="login-via-btn" href="{% provider_login_url 'google' %}">Google orqali kirish</a>
         </div>
       </div>
     </div>
