--- a/templates/account/signup_closed.html
+++ b/templates/account/signup_closed.html
@@ -2,10 +2,10 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
+{% block head_title %}{% trans "Ro'yxatdan o'tish yopish" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+<h1>{% trans "Ro'yxatdan o'tish yopish" %}</h1>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+<p>{% trans "Kechirasiz, lekin roʻyxatdan oʻtish hozirda yopiq." %}</p>
 {% endblock %}
